--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -73,11 +73,14 @@
   margin-top: 0px;
 }
 .cardSection:first-child{
-  margin-top: 5px;
+  margin-top: 0px;
 }
+.cardSection:last-child{
+  padding-bottom: 35px;
+}
+
 .cardlogo{
   width: 3.5%;
-    margin: .1rem 0.2rem 1rem 0;
 }
 .cardlogo_R{
   width: 4%;
@@ -87,11 +90,12 @@
   
   padding: 10px !important;
   border-radius: 10px !important;
-  background-color: #70C6CB !important;
+  background-color: #417bdc2e !important;
   margin: .1rem 0 .1rem 0 !important;
   line-height: 18px;
   text-align: left;
   width: fit-content;
+  border: 0.3px solid #19194ca1;
 }
 .card-panel_R {
   text-align: right;
@@ -140,4 +144,15 @@
   top:85% !important;
   right:5% !important;
   color: #61dafb;
+}
+
+.cocoHere:first-child{
+  padding-top: 100px;
+  color: white;
+}
+.cocoHere{
+  color: white;
+}
+.cocoBody{
+height: 80vh;
 }
