--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -9,13 +9,19 @@ background-color: white;
 
 }
 .cocoInput{
-    border: none;
-    height: 100% !important;
-    padding-left: 20px !important;
-    width: 95% !important;
+    border: none !important;
+    height: 99% !important;
+    padding-left: 10px !important;
+    width: 94% !important;
     color: #3B78DB;
 }
-.cocoMicBlue{
+@media screen and (max-width: 720px) {
+    .cocoInput{  
+        width: 85% !important;
+     }
+  }
+
+.cocoMicBlue,.cocoSend{
     background-image: url("../../images/micBlue.jfif");
     background-size: cover;
     float: right;
@@ -25,6 +31,10 @@ background-color: white;
     /* padding-right: 17px; */
     margin-right: 10px;
     margin-top: 3px;
+}
+.cocoSend{
+    background-image: url("../../images/send.jfif");
+    display: none;
 }
 .cocoMicRed{
     background-image: url("../../images/micred.jfif");
@@ -36,3 +46,11 @@ background-color: white;
     margin-right: 10px;
     margin-top: 3px;
 }
+@media screen and (max-width: 720px) {
+    .cocoMicBlue, .cocoMicRed{
+        display: none;
+    }
+    .cocoSend{
+        display: block;
+    }
+    }
