--- a/client/src/components/slider/slider.css
+++ b/client/src/components/slider/slider.css
@@ -7,14 +7,21 @@
     z-index: 9999;
     width: 100%;
     height: 100vh;
-    background-color: white;
-    
- }
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("../../images/blue.jpg");
+}
+
+
  .homeIcon{
     margin: auto;
     width: 272px;
     margin-top:125px;
  }
  .homeText{
-     color: black;
+     color: white;
+     font-size: 4.2rem !important;
  }
+ @media screen and (max-width: 560px) {
+    .homeText{
+        font-size: 3.2rem !important;
+    }
+  }
