--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
   margin: 0px;
   padding: 0px;
   color: black;
@@ -99,6 +99,7 @@ body{
   border-radius: 40px;
   min-width: 245px;
   margin-left: 20px;
+  margin-top: 10px;
   box-shadow: 0 3px 2px 0 rgba(21, 3, 3, 0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
 .contentsearch{
