--- a/client/src/index.css
+++ b/client/src/index.css
@@ -102,6 +102,11 @@ body{
   margin-top: 10px;
   box-shadow: 0 3px 2px 0 rgba(21, 3, 3, 0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
+@media screen and (max-width: 560px) {
+  .btn_content{
+    margin-left: 0px;
+  }
+}
 .contentsearch{
   position: sticky;
   bottom: 0px;
