--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -149,11 +149,15 @@
 .cocoHere{
   color: white;
   word-wrap: break-word;
-  font-size: 4.2rem;
+  font-size: 3.5rem;
+  padding-left: 7.5rem;
+  padding-right: 7.5rem;
 }
 @media screen and (max-width: 480px) {
   .cocoHere{
-      font-size: 3.2rem !important;
+      font-size: 2.5rem !important;
+      padding-left: 1rem;
+      padding-right: 1rem;
   }
 }
 .cocoBody{
