--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@ body{
   background-size: cover;
   min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("./images/blue.jpg");
-  background-image: url("./images/nature5.jpg");
+  background-image: url("./images/highway.jpg");
   background-attachment: fixed;
   overflow-y: auto !important;
 }
