--- a/client/src/components/slider/slider.css
+++ b/client/src/components/slider/slider.css
@@ -10,7 +10,22 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("../../images/blue.jpg");
 }
 
-
+.signout{
+    right: 10px;
+    position: absolute;
+    top: 0px;
+    background: #417bdc2e;
+    border: 2px solid;
+    font-size: 20px;
+    color: #ffffff;
+    padding: 7px 10px 7px 10px;
+    border: 2px solid #19194ca1;
+    border-radius: 40px;
+    min-width: 125px;
+    margin-left: 20px;
+    margin-top: 10px;
+    box-shadow: 0 3px 2px 0 rgba(21, 3, 3, 0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
  .homeIcon{
     margin: auto;
     width: 272px;
@@ -19,6 +34,7 @@
  .homeText{
      color: white;
      font-size: 4.2rem !important;
+     margin-bottom: 15px;
  }
  @media screen and (max-width: 560px) {
     .homeText{
