--- a/client/src/components/cocoBody/cocoBody.css
+++ b/client/src/components/cocoBody/cocoBody.css
@@ -7,6 +7,33 @@
  .logoWidth{  
     width: 40%;
  }
+ .cardDetails{
+   text-align: center;
+   font-size: 16px;
+   color: white;
+   display: inline;
+   font-weight: 600;
+ 
+ }
+ .cardDetails_L{
+   padding-left: 100px;
+   text-align: right !important;
+   float: right;
+ }
+ .card_B{
+   padding: 10px !important;
+   /* border-radius: 10px !important; */
+   /* margin: .1rem 0 .1rem 0 !important; */
+   line-height: 18px;
+   /* text-align: left; */
+   width: -moz-fit-content;
+   width: fit-content;
+   border: 0.3px solid #19194ca1;
+    border-radius: 0px !important;
+    margin: auto !important;
+    margin-top: 10px !important;
+    background-color: #417bdc63 !important;
+ }
  @media screen and (max-width: 560px) {
     .logoWidth{  
         width: 25%;
