--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,9 +14,10 @@ body{
   background-size: cover;
   min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("./images/blue.jpg");
-  background-image: url("./images/highway.jpg");
+  background-image: url("../src/images/highway.jpg");
   background-attachment: fixed;
   overflow-y: auto !important;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 .nomargin{
   margin:0px
@@ -71,7 +72,7 @@ body{
 }
 .contentbuttons{
   text-align: center;
-  padding-top: 58px;
+  padding-top: 24px;
 }
 .contentbuttons:last-child{
   text-align: center;
@@ -111,6 +112,18 @@ body{
   margin-top: 10px;
   box-shadow: 0 3px 2px 0 rgba(21, 3, 3, 0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
+.btn_content:hover {
+    
+  color: rgba(255, 255, 255,0.1);
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.479);
+  box-shadow: 
+  inset 0 0 2px #fff, 
+  0 0 3px #fff,            /* outer white */
+  -2px 0 5px #f0f,        /* outer left magenta */
+  2px 0 5px #0ff;         /* outer right cyan */
+  
+}
+
 @media screen and (max-width: 560px) {
   .btn_content{
     margin-left: 0px;
