--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,15 @@ body{
   overflow-y: auto !important;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
+
+@media (max-width: 991px) {
+
+  .body{
+    background-image: url("../src/images/highway-m.jpg");
+     background-attachment: scroll;
+  }
+ 
+ }
 .nomargin{
   margin:0px
 }
