--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@ body{
   background-size: cover;
   min-height: 100vh;
   background-position: center;
+  -webkit-background-size:cover;
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("./images/blue.jpg");
   background-image: url("../src/images/highway.jpg");
   background-attachment: fixed;
@@ -24,6 +25,8 @@ body{
 @media (max-width: 991px) {
 
   .body{
+    background-size: cover;
+    -webkit-background-size:cover;
     background-position: center;
     background-image: url("../src/images/highway-m.jpg");
      background-attachment: scroll;
