--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,16 +114,20 @@ body{
     margin-left: 20px;
 }
 .btn_content{
-  background: #417bdc2e;
+  background: #09234ebf;
   border: 2px solid;
   font-size: 25px;
   color: #ffffff;
-  padding: 14px 20px 14px 20px;
+  padding: 10px 12px;
   border: 2px solid #19194ca1;
   border-radius: 40px;
+  display: block;
+ 
   min-width: 245px;
   margin-left: 20px;
-  margin-top: 10px;
+ 
+  margin: auto;
+  margin-top: 4px;
   box-shadow: 0 3px 2px 0 rgba(21, 3, 3, 0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
 .btn_content:hover {
