--- a/client/src/components/slider/slider.css
+++ b/client/src/components/slider/slider.css
@@ -7,7 +7,7 @@
     z-index: 9999;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("../../images/blue.jpg");
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("../../images/blue.jpg"); */
 }
 
 .signout{
@@ -33,11 +33,13 @@
  }
  .homeText{
      color: white;
-     font-size: 4.2rem !important;
-     margin-bottom: 15px;
+     font-size: 3.2rem !important;
+     padding: 0px 15rem;
+     margin-bottom: 35px;
  }
  @media screen and (max-width: 560px) {
     .homeText{
         font-size: 3.2rem !important;
+        padding: 0px 3rem;
     }
   }
