--- a/client/src/components/slider/slider.css
+++ b/client/src/components/slider/slider.css
@@ -2,8 +2,8 @@
     /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("../../images/blue.jpg"); */
     opacity: 1; 
     position: fixed;
-    left: 0;
-    top: 0;
+    /* left: 0;
+    top: 0; */
     z-index: 9999;
     width: 100%;
     height: 100vh;
