--- a/client/src/components/cocoBody/cocoBody.css
+++ b/client/src/components/cocoBody/cocoBody.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-shrink: 0;
      height: 200px;
-    width: 25%;
+    width: 320px;
     justify-content: space-between;
     background-size: 100% 100%;
     background-color: #09234ebf !important;
