--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,11 +25,11 @@ body{
 @media (max-width: 991px) {
 
   .body{
-    background-size: cover;
-    -webkit-background-size:cover;
+   
+    -webkit-background-size:100% 100%;
+    background-size: 100% 100%;
     background-position: center;
     background-image: url("../src/images/highway-m.jpg");
-     background-attachment: scroll;
   }
  
  }
