--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,9 +14,7 @@ body{
   background-size: 100% 100%;
   min-height: 100vh;
   background-position: center;
-  -webkit-background-size:cover;
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("./images/blue.jpg");
-  background-image: url("../src/images/highway.jpg");
+  -webkit-background-size:cover; background-image: url("../src/images/highway.jpg");
   background-attachment: fixed;
   overflow-y: auto !important;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
@@ -26,8 +24,7 @@ body{
 
   .body{
    
-    -webkit-background-size:100% 100%;
-    background-size: 100% 100%;
+    background-size: contain;
     background-position: center;
     background-image: url("../src/images/highway-m.jpg");
   }
