--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,13 +22,12 @@ body{
 
 @media (max-width: 991px) {
 
-  .body{
-    background-repeat: no-repeat;
+  body{
+   
+    -webkit-background-size:100% 100%;
     background-size: 100% 100%;
-background-attachment: fixed;
-background-image: url(https://images.unsplash.com/photo-1462556791646-c201b8241a94?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1490&q=80);
-
-
+    background-position: center;
+    background-image: url("../src/images/highway-m.jpg");
   }
  
  }
