--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,14 @@ body{
     background-size: 100% 100%;
     background-position: center;
     background-image: url("../src/images/highway-m.jpg");
+
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 0px !important;
+background-attachment: scroll;
+background-image: url(https://images.unsplash.com/photo-1462556791646-c201b8241a94?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1490&q=80);
+
+
   }
  
  }
