--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
 body{
   margin: 0px;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: contain;
   min-height: 100vh;
   background-position: center;
   -webkit-background-size:cover; background-image: url("../src/images/highway.jpg");
