--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,9 +28,9 @@ body{
     background-size: 100% 100%;
     background-position: center;
     background-image: url("../src/images/highway-m.jpg");
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
   }
  
  }
