--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,13 +24,13 @@ body{
 
   body{
    
-    -webkit-background-size:100% 100%;
-    background-size: 100% 100%;
+    -webkit-background-size:contain;
+    background-size: contain;
     background-position: center;
     background-image: url("../src/images/highway-m.jpg");
-    -webkit-background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
-    -o-background-size: 100% 100%;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
   }
  
  }
