--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,21 @@ body{
     -moz-background-size: contain;
     -o-background-size: contain;
   }
- 
+  body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url("../src/images/highway-m.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
  }
 .nomargin{
   margin:0px
