--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -149,13 +149,13 @@
 .cocoHere{
   color: white;
   word-wrap: break-word;
-  font-size: 3.5rem;
+  font-size: 3.2rem;
   padding-left: 7.5rem;
   padding-right: 7.5rem;
 }
 @media screen and (max-width: 480px) {
   .cocoHere{
-      font-size: 2.5rem !important;
+      font-size: 2.2rem !important;
       padding-left: 1rem;
       padding-right: 1rem;
   }
@@ -163,7 +163,7 @@
 
 .cocoBody{
 min-height: 80vh;
-padding-top: 50px;
+padding-top: 100px;
 padding-left: 5px;
 padding-right: 5px;
 }
@@ -180,8 +180,9 @@ padding-right: 5px;
 }
 
 nav{
-  background-color: #304d67d1;
+  background-color: #304d67;
   z-index: 999999;
+  position: fixed;
 }
 .navIcon{
   display: inline;
